# lazy-loader

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTOR.md  LICENSE.md  MANIFEST.in  Makefile  README.md  RELEASE.md  kk.py  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: ci-tests.yml  coverage.yml  lint.yml  milestone-merged-prs.yaml  release.yml  test.yml
.spin/: cmds.py
lazy_loader/: __init__.py
lazy_loader/tests/: test_lazy_loader.py  test_lazy_loader_magic.py
lazy_loader/tests/fake_pkg_magic/: __init__.py
lazy_loader/tests/fake_pkg_magic/nested_pkg/: __init__.py
src/lazy_loader/: __init__.py
tests/: fake_func.py  test_lazy_loader.py
tests/fake_pkg/: __init__.py  __init__.pyi  some_func.py
