[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy_loader"
requires-python = ">=3.7"
authors = [{name = "Scientific Python Developers"}]
readme = "README.md"
license = {file = "LICENSE.md"}
dynamic = ['version']
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
description = "Makes it easy to load subpackages and functions on demand."
dependencies = [
  "packaging",
  "importlib_metadata; python_version < '3.8'",
]

[project.optional-dependencies]
test = ["pytest >= 7.4", "pytest-cov >= 4.1"]
lint = ["pre-commit == 3.7.0"]
dev = ["changelist == 0.5"]

[project.urls]
Home = "https://scientific-python.org/specs/spec-0001/"
Source = "https://github.com/scientific-python/lazy_loader"


[tool.changelist]
ignored_user_logins = ["dependabot[bot]", "pre-commit-ci[bot]", "web-flow"]

[tool.setuptools.dynamic.version]
attr = 'lazy_loader.__version__'

[tool.ruff]
line-length = 88
target-version = "py37"
select = [
    "C",
    "E",
    "F",
    "W",
    "B",
    "I",
    "UP",
]
ignore = ["B018", "B028"]
exclude = [
  "lazy_loader/tests/fake_pkg/__init__.pyi",
]
